Correcting the topbar collapse issue (#426)

--- a/app/js/components/topbar/_topbar.scss
+++ b/app/js/components/topbar/_topbar.scss
@@ -4,6 +4,7 @@ $topbar-border-color: #ddd;
 
 
 topbar {
+  display: block;
   @include rem('padding', $global-margin);
   background: $topbar-bg;
   border-bottom: 4px solid $topbar-border-color;
